acct cart faq web & mobile

--- a/account.html
+++ b/account.html
@@ -44,14 +44,14 @@
         <!--navbar-->
 
         <!--banner-->
-        <div class="main-container">
+        <div class="bannerclass">
             <h1>account</h1>
         </div>
         <!--end banner-->
 
         <!--content-->
         <div>
-            <div class="row">
+            <div class="row profile">
                 <div class="col-md-9">
                     <div class="accountcontainer">
                         <img src="images/profile.png">
@@ -67,10 +67,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 d-flex align-items-end justify-content-end">
+                <div class="col-md-3 d-flex align-items-end justify-content-end mt-3 mt-md-0">
                     <div class="accountcontainer">
                         <i class="fa-regular fa-circle-user"></i>
-                        <p class="p-12px-bottom"><u>Log Out</u></p>
+                        <p><u>Log Out</u></p>
                     </div>
                 </div>
             </div>
@@ -89,9 +89,10 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h6>Name</h6>
-                            <p>Lica</p> <br>
+                            <p>Lica</p>
                             <h6>Email</h6>
                             <p>licaloveskacaang@email.com</p>
+                            <button class="actionbutton">Edit</button>
                         </div>
                         <div class="col-md-6">
                             <h6>Address</h6>
@@ -101,14 +102,6 @@
                                 Singapore 687655<br>
                                 Singapore
                             </p>
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <button class="actionbutton">Edit</button>
-                        </div>
-                        <div class="col-md-6">
                             <button class="actionbutton">View other addresses</button>
                         </div>
                     </div>
@@ -125,26 +118,26 @@
             <!-- rewards tab -->
             <div id="rewards" class="tabacctcontent">
                 <div class="acctrect">
-                    <div class="row aligncenter">
-                        <div class="col-md-3 reedemable">
+                    <div class="row text-center">
+                        <div class="col-md-3 col-sm-6 col-6 reedemable">
                             <img class="imgacct" src="images/free-delivery.png">
                             <h6>Free Delivery</h6>
                             <p>150 points</p>
                             <button class="actionbutton">Redeem</button>
                         </div>
-                        <div class="col-md-3 unreedemable">
+                        <div class="col-md-3 col-sm-6 col-6 unreedemable">
                             <img class="imgacct" src="images/two-dollars-off.png">
                             <h6>$2 OFF</h6>
                             <p>350 points</p>
                             <button class="actionbutton">More points needed</button>
                         </div>
-                        <div class="col-md-3 unreedemable">
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6 unreedemable">
                             <img class="imgacct" src="images/five-dollars-off.png">
                             <h6>$5 OFF</h6>
                             <p>600 points</p>
                             <button class="actionbutton">More points needed</button>
                         </div>
-                        <div class="col-md-3 unreedemable">
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6 unreedemable">
                             <img class="imgacct" src="images/ten-dollars-off.png">
                             <h6>$10 OFF</h6>
                             <p>1000 points</p>
@@ -162,7 +155,7 @@
                             <p>11 November 2023</p>
                         </div>
                         <div class="col-md-6">
-                            <h6 class="alignright">+150</h6>
+                            <h6 class="text-end">+150</h6>
                         </div>
                     </div>
                 </div>
