--- a/cart.html
+++ b/cart.html
@@ -45,111 +45,138 @@
     <!--navbar-->
 
     <!--banner-->
-    <div class="main-container">
+    <div class="bannerclass">
       <h1>checkout</h1>
-  </div>
-  <!--end banner-->
+    </div>
+    <!--end banner-->
 
     <!--content-->
     <div class="container">
       <div class="row">
         <div class="col-md-8">
           <div class="table-responsive">
-            <table>
+            <table class="table">
               <tr>
-                <th scope="col">Products</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Total</th>
-                <th class="alignright" scope="col">Remove</th>
+                <th scope="col" class="col-3">
+                  <h6>Products</h6>
+                </th>
+                <th scope="col" class="col-5"></th>
+                <th scope="col" class="col-1 remove">
+                  <h6>Quantity</h6>
+                </th>
+                <th scope="col" class="col-2 text-center">
+                  <h6>Total</h6>
+                </th>
+                <th scope="col" class="col-1">
+                  <h6>Remove</h6>
+                </th>
               </tr>
               <!--item 1-->
               <tr>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <img src="images/chilli-crab-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
-                    <div class="flex-column ms-4">
-                      <p class="mb-4">$4.50</p>
-                      <p class="mb-4">Chilli Crab Cashew Nuts</p>
-                      <p class="mb-0">Size: 80g</p>
-                    </div>
-                  </div>
+                <td><img src="images/chilli-crab-cashews.png" class="img-fluid rounded-3"></td>
+                <td class="removesmall">
+                  <p>$4.50</p>
+                  <p>Chilli Crab Cashew Nuts</p>
+                  <p>Size: 80g</p>
                 </td>
-                <td>
-                  <div class="d-flex align-items-center">
+                <td class="removesmall">
+                  <div class="d-flex text-center quantity">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
-                    <p style="padding: 0 20px;">1</p>
+                    <p>1</p>
                     <span class="material-symbols-outlined">add_circle</span>
                   </div>
                 </td>
-                <td>$4.50 SGD</td>
-                <td class="alignrightpadding"><span class="material-symbols-outlined">close</span></td>
+                <td class="showonlysmall">
+                  <p>$4.50</p>
+                  <p>Chilli Crab Cashew Nuts</p>
+                  <p>Size: 80g</p>
+                  <div class="d-flex text-center quantity">
+                    <span class="material-symbols-outlined">do_not_disturb_on</span>
+                    <p>1</p>
+                    <span class="material-symbols-outlined">add_circle</span>
+                  </div>
+                </td>
+                <td class="price text-center"><p>$4.50 SGD</p></td>
+                <td class="text-center"><span class="material-symbols-outlined">close</span></td>
               </tr>
               <!--item 2-->
               <tr>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <img src="images/biscoff-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
-                    <div class="flex-column ms-4">
-                      <p class="mb-4">$4.50</p>
-                      <p class="mb-4">Biscoff Cashew Nuts</p>
-                      <p class="mb-0">Size: 80g</p>
-                    </div>
-                  </div>
+                <td><img src="images/biscoff-cashews.png" class="img-fluid rounded-3"></td>
+                <td class="removesmall">
+                  <p>$4.50</p>
+                  <p>Biscoff Cashew Nuts</p>
+                  <p>Size: 80g</p>
                 </td>
-                <td>
-                  <div class="d-flex align-items-center">
+                <td class="removesmall">
+                  <div class="d-flex text-center quantity">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
-                    <p style="padding: 0 20px;">2</p>
+                    <p>1</p>
                     <span class="material-symbols-outlined">add_circle</span>
                   </div>
                 </td>
-                <td>$9.00 SGD</td>
-                <td class="alignrightpadding"><span class="material-symbols-outlined">close</span></td>
+                <td class="showonlysmall">
+                  <p>$4.50</p>
+                  <p>Biscoff Cashew Nuts</p>
+                  <p>Size: 80g</p>
+                  <div class="d-flex text-center quantity">
+                    <span class="material-symbols-outlined">do_not_disturb_on</span>
+                    <p>1</p>
+                    <span class="material-symbols-outlined">add_circle</span>
+                  </div>
+                </td>
+                <td class="price text-center"><p>$9.00 SGD</p></td>
+                <td class="text-center"><span class="material-symbols-outlined">close</span></td>
               </tr>
               <!--item 3-->
               <tr>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <img src="images/salted-egg-and-cheese-cashews.png" class="img-fluid rounded-3" style="width: 120px;">
-                    <div class="flex-column ms-4">
-                      <p class="mb-4">$4.50</p>
-                      <p class="mb-4">Salted Egg Yolk and Cheese <br> Cashew Nuts</p>
-                      <p class="mb-0">Size: 80g</p>
-                    </div>
-                  </div>
+                <td><img src="images/salted-egg-and-cheese-cashews.png" class="img-fluid rounded-3"></td>
+                <td class="removesmall">
+                  <p>$4.50</p>
+                  <p>Salted Egg Yolk and Cheese Cashew Nuts</p>
+                  <p>Size: 80g</p>
                 </td>
-                <td>
-                  <div class="d-flex align-items-center">
+                <td class="removesmall">
+                  <div class="d-flex text-center quantity">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
-                    <p style="padding: 0 20px;">1</p>
+                    <p>1</p>
                     <span class="material-symbols-outlined">add_circle</span>
                   </div>
                 </td>
-                <td>$4.50 SGD</td>
-                <td class="alignrightpadding"><span class="material-symbols-outlined">close</span></td>
+                <td class="showonlysmall">
+                  <p>$4.50</p>
+                  <p>Salted Egg Yolk and Cheese Cashew Nuts</p>
+                  <p>Size: 80g</p>
+                  <div class="d-flex text-center quantity">
+                    <span class="material-symbols-outlined">do_not_disturb_on</span>
+                    <p>1</p>
+                    <span class="material-symbols-outlined">add_circle</span>
+                  </div>
+                </td>
+                <td class="price text-center"><p>$4.50 SGD</p></td>
+                <td class="text-center"><span class="material-symbols-outlined">close</span></td>
               </tr>
             </table>
           </div>
         </div>
         <div class="col-md-4">
           <div class="table-responsive">
-            <table>
+            <table class="table">
               <tr>
-                <th>
-                  Total <br>
-                  <p class="p-24px">$18.00 SGD</p>
-                  You are $5 away from free delivery
+                <th class="cartamt">
+                  <h6>Total</h6> 
+                  <h3>$18.00 SGD</h3> <br>
+                  <h6>$5 away from free delivery</h6>
                 </th>
               </tr>
               <tr>
-                <td>
-                  Check out to earn 180 C&sup3 points! <br>
-                  <a href="account.html" class="contact-link">150 points available!</a> <br><br>
-                  Order Instructions <br>
+                <td class="checkout-text">
+                  <p class="removemargin">Check out to earn 180 C&sup3 points!</p>
+                  <p><a href="account.html" class="contact-link">150 points available!</a> <br><br>
+                    Order Instructions</p>
                   <textarea></textarea>
-                  <p class="p-12px">Taxes and shipping calculated at next step.</p>
-                  <button class="actionbutton-100">Check out</button>
-                  <p class="p-12px-center">By clicking Check out, you agree to our <br> Terms & Conditions.</p>
+                  <p>Taxes and shipping calculated at next step.</p>
+                  <button class="actionbutton">Check out</button>
+                  <p class="removemargin">By clicking Check out, you agree to our <u>Terms & Conditions</u>.</p>
                 </td>
               </tr>
             </table>
