--- a/faqs.html
+++ b/faqs.html
@@ -46,7 +46,7 @@
     <div class="page-20-percent">
 
         <!--banner-->
-        <div class="main-container">
+        <div class="bannerclass">
             <h1>frequently asked<br>questions (faqs)</h1>
         </div>
         <!--end banner-->
@@ -106,7 +106,8 @@
                     </button>
 
                     <div id="qnFourAnswer" class="accordion-collapse collapse">
-                        <h6 class="accordion-body">For gluten-free nuts, do purchase only Black Pepper, Smoky BBQ, Roasted and Mala. </h6>
+                        <h6 class="accordion-body">For gluten-free nuts, do purchase only Black Pepper, Smoky BBQ,
+                            Roasted and Mala. </h6>
                     </div>
                 </div>
                 <!--q5-->
@@ -117,7 +118,8 @@
                     </button>
 
                     <div id="qnFiveAnswer" class="accordion-collapse collapse">
-                        <h6 class="accordion-body">For vegetarian options, do purchase only Black Pepper, Lotus Biscoff, Smoky BBQ, Roasted and Mala.</h6>
+                        <h6 class="accordion-body">For vegetarian options, do purchase only Black Pepper, Lotus Biscoff,
+                            Smoky BBQ, Roasted and Mala.</h6>
                     </div>
                 </div>
                 <!--q6-->
@@ -248,7 +250,8 @@
                     </button>
                     <div id="qnOneAnswer" class="accordion-collapse collapse">
                         <h6 class="accordion-body">Yes we do. We also provide bundle packs. Do contact us if you
-                            require such service using our <a href="contact-us.html" class="contact-link">contact form</a>.</h6>
+                            require such service using our <a href="contact-us.html" class="contact-link">contact
+                                form</a>.</h6>
                     </div>
                 </div>
                 <!--q2-->
@@ -260,7 +263,8 @@
 
                     <div id="qnTwoAnswer" class="accordion-collapse collapse">
                         <h6 class="accordion-body">Yes definitely. We do provide bundle packs which are cheaper. If you
-                            require more, do contact us via our <a href="contact-us.html" class="contact-link">contact form</a>.</h6>
+                            require more, do contact us via our <a href="contact-us.html" class="contact-link">contact
+                                form</a>.</h6>
                     </div>
                 </div>
                 <!--q3-->
@@ -283,7 +287,8 @@
 
                     <div id="qnFourAnswer" class="accordion-collapse collapse">
                         <h6 class="accordion-body">FYes. Do contact us via out <a href="contact-us.html"
-                            class="contact-link">contact form</a> so we can give you the price of the subscription based on your needs.</h6>
+                                class="contact-link">contact form</a> so we can give you the price of the subscription
+                            based on your needs.</h6>
                     </div>
                 </div>
                 <!--q5-->
@@ -294,7 +299,8 @@
                     </button>
 
                     <div id="qnFiveAnswer" class="accordion-collapse collapse">
-                        <h6 class="accordion-body">We will get your cashew nuts delivered within 3-5 working days after you have placed your orders.</h6>
+                        <h6 class="accordion-body">We will get your cashew nuts delivered within 3-5 working days after
+                            you have placed your orders.</h6>
                     </div>
                 </div>
                 <!--q6-->
@@ -306,8 +312,9 @@
 
                     <div id="qnSixAnswer" class="accordion-collapse collapse">
                         <h6 class="accordion-body">
-                            Yes, we provide free samples for first-time purchase. 
-                            Alternatively, you can find us at our <a href="farm.html" class="contact-link">farm</a> to take a look at our farm and try the cashew nuts fresh.
+                            Yes, we provide free samples for first-time purchase.
+                            Alternatively, you can find us at our <a href="farm.html" class="contact-link">farm</a> to
+                            take a look at our farm and try the cashew nuts fresh.
                         </h6>
                     </div>
                 </div>
