shop, indiv item and review page done

--- a/chillicrab.html
+++ b/chillicrab.html
@@ -41,7 +41,7 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/prod-chilli-crab.png" alt="" id="main-img" onclick="expandImage(event, 'main-img')">
+            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" alt="" id="main-img" onclick="expandImage(event, 'main-img')">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
@@ -104,55 +104,55 @@
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/products/mala-cashews.png"></a>
+                            <img src="images/shop-products/best-mala-flavoured-cashews.png"></a>
                             <p>Our fiery blend of Sichuan peppercorns, dried chilies, and aromatic spices will awaken your taste buds with a tantalizing heat and numbing sensation</p>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
-                            <a href=""><img src="images/products/laksa-cashews.png"></a>
+                            <a href=""><img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
                             <p>Experience the rich, aromatic delight of Laksa-spiced cashews. A creamy, spicy fusion that's simply irresistible.</p>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/products/chilli-crab-cashews.png"></a>
+                            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
                             <p>Savor the bold, spicy allure of chili crab-flavored cashews. A fusion of rich crab goodness and fiery heat in every bite.</p>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/products/salted-egg-cheese-cashews.png"></a>
+                            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png"></a>
                             <p>Indulge in the rich, savory allure of salted egg cashews. </p>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/products/smoky-bbq-cashews.png"></a>
+                            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
                             <p>Indulge in the smoky delight of BBQ cashews. Savory, irresistible, and perfect for a snack with a kick.</p>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/products/biscoff-cashews.png"></a>
+                            <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png"></a>
                             <p>Experience the delectable combination of Biscoff and cashews. A sweet, crunchy delight that's utterly irresistible.</p>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/products/chocolate-cashews.png"></a>
+                            <img src="images/shop-products/best-chocolate-flavoured-cashews.png"></a>
                             <p>Delight in the luxurious pairing of chocolate and cashews. A sweet, nutty indulgence that's simply irresistible.</p>
                         </div>
                     </div> 
                     <div class="col-md-2 col-sm-4 col-4">
                         <div>
                             <a href="">
-                            <img src="images/products/black-pepper-cashews.png"></a>
+                            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
                             <p>Savor the bold and zesty kick of black pepper-infused cashews. A flavorful, satisfying blend that's sure to tantalize your taste buds.</p>
                         </div>
                     </div>  
