--- a/shop.html
+++ b/shop.html
@@ -41,7 +41,7 @@
         <button class="tablinks" onclick="openTab(event, 'favourites')">Fan Favourites</button>
         <button class="tablinks" onclick="openTab(event, 'classics')">Classics</button>
         <button class="tablinks" onclick="openTab(event, 'local')">Local Delights</button>
-        <button class="tablinks" onclick="openTab(event, 'bundle')">Bundles</button>
+        <button class="tablinks" onclick="openTab(event, 'bundles')">Bundles</button>
       </div>
 
       <!-- tab content -->
@@ -52,7 +52,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/black-pepper-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-black-pepper-flavoured-cashews.png" class="shop-product-img">
             <h5> Black Pepper Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -64,7 +64,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" class="shop-product-img">
             <h5> Chilli Crab Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -76,7 +76,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/chocolate-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-chocolate-flavoured-cashews.png" class="shop-product-img">
             <h5> Chocolate Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -88,7 +88,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/laksa-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-laksa-flavoured-cashews.png" class="shop-product-img">
             <h5> Laksa Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -100,7 +100,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/biscoff-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png" class="shop-product-img">
             <h5> Lotus Biscoff Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -112,7 +112,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5> Mala Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -124,7 +124,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/salt-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png" class="shop-product-img">
             <h5> Salt-roasted Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -136,7 +136,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/salted-egg-cheese-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png" class="shop-product-img">
             <h5> Salted Egg and Cheese Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -148,7 +148,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/smoky-bbq-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png" class="shop-product-img">
             <h5> Smoky BBQ Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -160,7 +160,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
             <h5> Bundle A</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -172,7 +172,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-flavoured-cashews-bundle-6.png" class="shop-product-img">
             <h5> Bundle B</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -184,7 +184,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-flavoured-cashews-bundle-9.png" class="shop-product-img">
             <h5> Bundle C</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -202,7 +202,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5>  Mala Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -214,7 +214,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
             <h5> Bundle A</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -231,7 +231,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/laksa-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-laksa-flavoured-cashews.png" class="shop-product-img">
             <h5>  Laksa Cashews </h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -243,7 +243,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/biscoff-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png" class="shop-product-img">
             <h5> Lotus Biscoff Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -255,7 +255,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5> Mala Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -272,7 +272,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" class="shop-product-img">
             <h5>  Chilli Crab Cashews </h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -284,7 +284,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/biscoff-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png" class="shop-product-img">
             <h5> Lotus Biscoff Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -296,7 +296,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/salted-egg-cheese-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png" class="shop-product-img">
             <h5> Salted Egg and Cheese Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -313,7 +313,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/chocolate-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-chocolate-flavoured-cashews.png" class="shop-product-img">
             <h5>  Chocolate Cashews </h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -325,7 +325,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/salt-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png" class="shop-product-img">
             <h5> Salt-roasted Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -337,7 +337,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/smoky-bbq-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png" class="shop-product-img">
             <h5> Smoky BBQ Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -354,7 +354,7 @@
         <div class="shop-content">
           <a href="chillicrab.html">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png" class="shop-product-img">
             <h5>  Chilli Crab Cashews </h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -366,7 +366,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/laksa-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-laksa-flavoured-cashews.png" class="shop-product-img">
             <h5> Laksa Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -378,7 +378,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/mala-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-mala-flavoured-cashews.png" class="shop-product-img">
             <h5> Mala Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -390,7 +390,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/salted-egg-cheese-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png" class="shop-product-img">
             <h5> Salted Egg and Cheese Cashews</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -402,12 +402,12 @@
       </div>
 
       <!-- bundles-->
-      <div id="local" class="tabcontent shop-tabcontent">
+      <div id="bundles" class="tabcontent shop-tabcontent">
 
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-flavoured-cashews-bundle-3.png" class="shop-product-img">
             <h5>  Bundle A </h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -419,7 +419,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-flavoured-cashews-bundle-6.png" class="shop-product-img">
             <h5> Bundle B</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
@@ -431,7 +431,7 @@
         <div class="shop-content">
           <a href="#">
           <div class="shop-product">
-            <img src="images/products/chilli-crab-cashews.png" class="shop-product-img">
+            <img src="images/shop-products/best-flavoured-cashews-bundle-9.png" class="shop-product-img">
             <h5> Bundle C</h5>
             <div class="shop-review-line">
               <h6><img src="images/stars.png" alt="" height="12"> 1 review</h6>
